# ansible-role-filebeat

./: .gitignore  .travis.yml  Makefile  README.md  devbox.json  pyproject.toml  requirements.yml
.github/workflows/: lint.yml  main.yml  molecule.yml  release.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/7x/: molecule.yml
molecule/8x/: molecule.yml
molecule/common/: converge.yml  verify.yml
molecule/default/: converge.yml  molecule.yml  requirements.yml  verify.yml
molecule/default/tests/: test_default.py
molecule/install/: molecule.yml
tasks/: main.yml  service.yml
